Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20857

Multiple definitions for filename_hash

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4.8
    • 10.4.19, 10.5.10
    • Compiling
    • Centos-7, devtoolset 8
      cmake .. -DBUILD_CONFIG=mysql_release -DWITH_JEMALLOC=yes -DNOT_FOR_DISTRIBUTION=ON -Wno-dev

    Description

      [ 27%] Linking CXX executable explain_filename-t
      ../../storage/perfschema/libperfschema.a(pfs_instr.cc.o):(.bss+0x0): multiple definition of `filename_hash'
      /apps/rh/devtoolset-8/root/usr/bin/../lib/gcc/x86_64-redhat-linux/8/../../../../lib64/libiberty.a(filename_cmp.o):(.text+0x20): first defined here
      collect2: error: ld returned 1 exit status
      make[2]: *** [unittest/sql/CMakeFiles/explain_filename-t.dir/build.make:120: unittest/sql/explain_filename-t] Error 1
      make[1]: *** [CMakeFiles/Makefile2:1842: unittest/sql/CMakeFiles/explain_filename-t.dir/all] Error 2
      make: *** [Makefile:163: all] Error 2

      Attachments

        Activity

          People

            danblack Daniel Black
            smclinden Sean McLinden
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: