MDEV-20857: perf schema conflict name filename_hash

filename_hash is a function from libiberty.a from the system
but also an expored name in the perf schema static library.

We'll use a different name.